[package]
name = "rusty-kms"
version = "0.2.0"
authors = ["ushkarev <ushkarev@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "^0.10"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2"
cursive = "^0.11"
env_logger = "^0.6"
fs2 = "^0.4"
futures = "^0.1"
hex = "^0.3"
http = "^0.1"
hyper = "^0.12"
lazy_static = "^1"
log = "^0.4"
openssl = { version="^0.10", features = ["vendored"] }
rand = "^0.6"
regex = "^1"
ring = "^0.14"
rpassword = "^3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
time = "^0.1"
tokio = "^0.1"
tokio-signal = "^0.2"
uuid = { version = "^0.7", features = ["serde", "v4"] }

[dev-dependencies]
tempdir = "^0.3"

[features]
default = []
authorisation = []
